SERVER-12531  can appear in an elemMatch(value) and we should generate bounds in that case